# machinepart

./: .clang-format  README.md
docs/: overiew.md  prepare_env.md  shell_client_server.drawio
machinepart/: CMakeLists.txt  main.c
machinepart/demo/camera_demo/: CMakeLists.txt  main.c
machinepart/demo/camera_receiver_demo/: CMakeLists.txt  main.c
machinepart/demo/config_demo/: CMakeLists.txt  config.json  main.c
machinepart/demo/driver_simple_demo/: Makefile  README.md  test.c  test.sh
machinepart/demo/gpio_demo/: file.py  file1.py  script.sh
machinepart/demo/gtk_demo/: CMakeLists.txt  main.c
machinepart/demo/gtk_img_demo/: CMakeLists.txt  main.cpp
machinepart/demo/gyroscop_data_receiver_demo/: CMakeLists.txt  main.c
machinepart/demo/hello_world/: CMakeLists.txt  main.c
machinepart/demo/motor_demo/: CMakeLists.txt  main.c
machinepart/demo/net_tools_demo/: CMakeLists.txt  main.c  net_arp_wrap
machinepart/demo/v4l_demo/: CMakeLists.txt  main.c
machinepart/demo/wifi/: CMakeLists.txt  main.c
machinepart/demo/wifi_tcp_demo/: CMakeLists.txt  main.c
machinepart/demo/wifi_udp_demo/: CMakeLists.txt  main.c
machinepart/emulator/camera_receiver_emulator/: main.c
machinepart/emulator/gyroscope_emulator/: main.c
machinepart/emulator/motor_emulator/: main.c
machinepart/header/: camera.h  config.h  controller.h  core.h  fps_checker.h  gyroscope_receiver.h  log.h  motor_controller.h  utils.h  wifi.h
machinepart/header/camera/: camera.h  camera_opencv.h  camera_transmitter.h  camera_v4l.h
machinepart/src/: camera.cpp  controller.c  core.c  fps_checker.c  gyroscope_receiver.c  log.c  main_shell_client.c  motor_controller.c  utils.c  wifi.c
machinepart/src/camera/: camera.c  camera_opencv.cpp  camera_transmitter.c  camera_v4l.c
machinepart/src/config/: config.json  json_config.c  json_config.h
machinepart/src/shell/: main_shell_client.c  shell_client.c  shell_client.h  shell_server.c  shell_server.h
sources/: CMakeLists.txt  config.json
sources/config/: json_config.c  json_config.h
sources/emulator/: CMakeLists.txt
sources/emulator/camera_receiver_emulator/: main.c
sources/emulator/gyroscope_emulator/: main.c
sources/emulator/motor_emulator/: main.c
sources/fps_checker/: fps_checker.c  fps_checker.h
sources/machinepart/: camera.c  camera.h  camera_transmitter.c  camera_transmitter.h  gyroscope_receiver.c  gyroscope_receiver.h  log.h  main.c  motor_controller.c  motor_controller.h
sources/platform/emulator/: camera_file.c  camera_file.h  motor_shm.c  motor_shm.h
sources/platform/pi/: camera_v4l.c  camera_v4l.h  motor.c  motor.h
sources/shell/: CMakeLists.txt  main_shell_client.c  shell_client.c  shell_client.h  shell_server.c  shell_server.h
sources/tests/: CMakeLists.txt  test_main.c  test_motor_controller.c  test_motor_controller.h  test_shell_client.c  test_shell_client.h  test_shell_server.c  test_shell_server.h
